--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,6 +17,9 @@ FROM nginx:alpine
 # Copy the built files from the previous stage to Nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+# Copy custom Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # Expose port 80
 EXPOSE 80
 
